--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   web:
     build: ./
+    tty: true
+    stdin_open: true
     ports:
       - "5000:5000" #Forwards the container’s exposed port (5000) to port 5000 on the hos
     volumes:
